<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_score">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_bigger">Built it bigger</string>
    <string name="app_xyz">XYZ Reader</string>
    <string name="app_myapp">My own App</string>
    <string name="myNanoApp">My Nanodegree Apps!</string>
</resources>
