<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_app_portfolio_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bearsoft.com.br.myappportfolio.MyAppPortfolioMainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/myNanoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textViewTitle"
        tools:textSize="30sp"
        android:textStyle="normal|bold"
        android:textSize="30sp" />

    <Button
        android:text="@string/app_spotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAppSpotify"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <Button
        android:text="@string/app_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAppScore"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/app_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAppLibrary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/app_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBuiltBiggerApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/app_xyz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnXyzApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.08" />

    <Button
        android:text="@string/app_myapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMyApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>
